# agentroom

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  index.dev.html  package-lock.json  package.json  vite.config.ts
docs/: SESSION_DAEMON_DEBUG.md
docs/superpowers/plans/: 2026-04-10-session-monitoring.md  2026-04-11-adapter-alignment.md  2026-04-11-session-discovery-frontend-dev.md  2026-04-11-sessions-tab-rework-hub-only-plan.md
docs/superpowers/specs/: 2026-04-10-session-monitoring-design.md  2026-04-11-sessions-tab-rework-hub-only-design.md
scripts/: build-cass.sh  install-cass.sh
skills/searching-agent-sessions/: README.md  SKILL.md
src/: App.css  App.tsx  bridge.ts  index.css  types.ts
src-tauri/: Cargo.toml
src-tauri/src/: agent_state.rs  commands.rs  file_watcher.rs  lib.rs  transcript_parser.rs
src/adapters/: hubSession.test.ts  hubSession.ts
src/components/: SearchBar.tsx  SessionList.tsx  SessionPanel.tsx  StatusBar.tsx  TokenPanel.tsx
src/hooks/: useAgentEvents.ts
src/office/: assetLoader.ts  constants.ts  floorTiles.ts  notificationSound.ts  types.ts
src/office/components/: OfficeCanvas.tsx
src/office/engine/: characters.ts  officeState.ts  renderer.ts
src/services/: cass.ts  hub.test.ts  hub.ts
src/session_collector/: Cargo.toml
src/session_collector/src/: client.rs  collector.rs  main.rs  watcher.rs
src/session_collector/src/adapters/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs
src/session_common/: Cargo.toml
src/session_hub/: Cargo.toml
src/session_hub/src/: auth.rs  lib.rs  main.rs  server.rs  state.rs
src/session_hub/tests/: integration.rs
(+9 files in other folders)
