[package]
name = "agentroom-visual"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "agentroom_visual_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
sha2 = "0.10"
notify = "8"
