[package]
name = "session_collector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "session-collector"
path = "src/main.rs"

[dependencies]
session_common = { path = "../session_common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
dirs = "5"
anyhow = "1"
dotenvy = "0.15"
