[package]
name = "session_hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "session-hub"
path = "src/main.rs"

[lib]
name = "session_hub"
path = "src/lib.rs"

[dependencies]
session_common = { path = "../session_common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
